[tool.poetry]
name = "annotated_sink"
version = "0.1.0"
description = "check propagation of annotations on kitchen sink LinkML model"
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.1.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
